--- a/frontend/src/components/template/Logo.css
+++ b/frontend/src/components/template/Logo.css
@@ -5,13 +5,31 @@ aside.logo {
     align-items: center;
 }
 
+a.logo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 aside.logo img {
-    padding: 0px 15px;
-    width: 100%;
+    padding-left: 15px;
+    width: 50%;
+}
+
+aside.logo p {
+    font-weight: bolder;
+    font-size: 2rem;
+    padding-left: 5px;
+    color: #61DAFB;
+    align-self: center;
+    margin: 0;
 }
 
 @media(max-width: 576px) {
     aside.logo img {
-        width: 350px;
+        width: 20%;
+    }
+    aside.logo p {
+        font-size: 3rem;
     }
 }
